fix: set z-index to ImageModal header

--- a/src/shared/ui/ImageModal/ImageModal.module.css
+++ b/src/shared/ui/ImageModal/ImageModal.module.css
@@ -19,6 +19,7 @@
     left: 0;
     right: 0;
     width: 100%;
+    z-index: 1;
     color: white;
     display: flex;
     justify-content: space-between;
